--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta name="description" content="WDD 131 – Dynamic Web Fundamentals – Daniel Espitia - W01 Assignment: Home Page">
     <meta name="author" content="Daniel Espitia">
     <link rel="icon" href="images/daniel_espitia.jpg">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gruppo&family=Inter:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/base.css">
     <script src="scripts/getdates.js" defer></script>
 </head>
