--- a/temples.html
+++ b/temples.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caracas Venezuela Temple Photo Gallery</title>
-    <meta name="description" content="Caracas Venezuela Temple Photo Gallery">
+    <meta name="description" content="Caracas Venezuela Temple Photo Gallery - Explore stunning images of the Caracas Venezuela Temple, showcasing its architecture and serene surroundings.">
     <meta name="author" content="Daniel Espitia">
     <link rel="icon" href="images/caracas-venezuela-temple.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
@@ -29,7 +31,11 @@
         
         <div class="gallery">
             <figure>
-                <img src="images/caracas-venezuela-temple.jpg" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
+                <img src="images/caracas-venezuela-temple.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
+                <figcaption>Caracas Venezuela Temple</figcaption>
+            </figure>
+            <figure>
+                <img src="images/caracas-venezuela-temple-8.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
             <figure>
@@ -37,31 +43,27 @@
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/caracas-venezuela-temple-2.jpg" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
+                <img src="images/caracas-venezuela-temple-2.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/caracas-venezuela-temple-3.webp" alt="Caracas Venezuela Temple at sunset" loading="lazy" decoding="async">
+                <img src="images/caracas-venezuela-temple-3.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/caracas-venezuela-temple-4.jpg" alt="Main entrance of the Caracas Temple" loading="lazy" decoding="async">
+                <img src="images/caracas-venezuela-temple-4.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/caracas-venezuela-temple-5.jpg" alt="Inauguration" loading="lazy" decoding="async">
+                <img src="images/caracas-venezuela-temple-5.webp" alt="Inauguration" loading="lazy" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/caracas-venezuela-temple-6.jpg" alt="Sealing room" loading="lazy" decoding="async">
+                <img src="images/caracas-venezuela-temple-6.webp" alt="Sealing room" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/caracas-venezuela-temple-7.jpg" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
-                <figcaption>Caracas Venezuela Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images/caracas-venezuela-temple-1.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
+                <img src="images/caracas-venezuela-temple-7.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
         </div>
