--- a/temples.html
+++ b/temples.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
+    <script src="scripts/temples.js" defer></script>
 </head>
 <body>
     <header>
@@ -31,39 +32,39 @@
         
         <div class="gallery">
             <figure>
-                <img src="images/caracas-venezuela-temple.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
+                <img src="images/caracas-temple.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/caracas-venezuela-temple-8.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
+                <img src="images/caracas-temple-8.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/caracas-venezuela-temple-1.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
+                <img src="images/caracas-temple-1.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/caracas-venezuela-temple-2.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
+                <img src="images/caracas-temple-2.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/caracas-venezuela-temple-3.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
+                <img src="images/caracas-temple-3.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/caracas-venezuela-temple-4.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
+                <img src="images/caracas-temple-4.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/caracas-venezuela-temple-5.webp" alt="Inauguration" loading="lazy" decoding="async">
+                <img src="images/caracas-temple-5.webp" alt="Inauguration" loading="lazy" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/caracas-venezuela-temple-6.webp" alt="Sealing room" decoding="async">
+                <img src="images/caracas-temple-6.webp" alt="Sealing room" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/caracas-venezuela-temple-7.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
+                <img src="images/caracas-temple-7.webp" alt="Caracas Venezuela Temple - front view" loading="lazy" decoding="async">
                 <figcaption>Caracas Venezuela Temple</figcaption>
             </figure>
         </div>
@@ -77,6 +78,5 @@
         <p>Last Modification: <span id="lastModified"></span></p>
     </footer>
     
-    <script src="scripts/temples.js" defer></script>
-</body>
+    </body>
 </html>
