Fix stylesheet link path in place.html

--- a/place.html
+++ b/place.html
@@ -6,7 +6,7 @@
     <title>Venezuela: Land of Grace</title>
     <meta name="description" content="A webpage dedicated to showing information about Venezuela, following the W03 Assignment requirements for WDD 131.">
     <meta name="author" content="Daniel Espitia">
-    <link rel="stylesheet" href="/styles/place.css">
+    <link rel="stylesheet" href="styles/place.css">
     <link rel="icon" href="images/veneuela.webp">
 
 </head>
